work on iOS drop shadow bug

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ a {
 
 #headshot {
 	max-width: 100%;
+	border: 0;
 	border-radius: 50%;
 	filter: drop-shadow(0px 5px 5px);
 }
